update regex pattern for streaming_server_operator_cpp_functional_test
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/streaming_server/CMakeLists.txt
+++ b/operators/streaming_server/CMakeLists.txt
@@ -345,7 +345,7 @@ if(BUILD_TESTING)
 
       set_tests_properties(streaming_server_operator_cpp_functional_test PROPERTIES
                            TIMEOUT 120
-                           PASS_REGULAR_EXPRESSION "FUNCTIONAL test PASSED.*C\\+\\+ StreamingServer.*successful"
+                           PASS_REGULAR_EXPRESSION "FUNCTIONAL test PASSED.*StreamingServer.*successful"
                            FAIL_REGULAR_EXPRESSION "FUNCTIONAL test.*FAILED")
     endif()
   endif()
