--- a/operators/streaming_server/CMakeLists.txt
+++ b/operators/streaming_server/CMakeLists.txt
@@ -263,6 +263,35 @@ if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
 endif()
 
+# Download test data for streaming server tests
+# Default to download datasets for testing
+option(HOLOHUB_DOWNLOAD_DATASETS "Download datasets" ON)
+
+# Download the endoscopy sample data for testing
+if(HOLOHUB_DOWNLOAD_DATASETS AND BUILD_TESTING)
+  include(holoscan_download_data)
+  holoscan_download_data(endoscopy
+    URL nvidia/clara-holoscan/holoscan_endoscopy_sample_data:20230222
+    DOWNLOAD_NAME holoscan_endoscopy_sample_data_20230222.zip
+    DOWNLOAD_DIR ${CMAKE_BINARY_DIR}/data
+    GENERATE_GXF_ENTITIES
+    GXF_ENTITIES_HEIGHT 480
+    GXF_ENTITIES_WIDTH 854
+    GXF_ENTITIES_CHANNELS 3
+    GXF_ENTITIES_FRAMERATE 30
+  )
+  # Create a symlink to make the data easily accessible at the expected location
+  add_custom_command(TARGET endoscopy_data POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E create_symlink
+            ${CMAKE_BINARY_DIR}/data/endoscopy/surgical_video.gxf_entities
+            ${CMAKE_BINARY_DIR}/data/surgical_video.gxf_entities
+    COMMAND ${CMAKE_COMMAND} -E create_symlink
+            ${CMAKE_BINARY_DIR}/data/endoscopy/surgical_video.gxf_index
+            ${CMAKE_BINARY_DIR}/data/surgical_video.gxf_index
+    COMMENT "Creating symlinks for surgical video data"
+  )
+endif()
+
 # Testing infrastructure
 include(CTest)
 if(BUILD_TESTING)
@@ -285,6 +314,12 @@ if(BUILD_TESTING)
                          TIMEOUT 120
                          PASS_REGULAR_EXPRESSION "16 passed"
                          FAIL_REGULAR_EXPRESSION "failed|FAILED|ERROR")
+
+    # Set up data download fixture if enabled
+    if(HOLOHUB_DOWNLOAD_DATASETS AND TARGET endoscopy_data)
+      set_tests_properties(streaming_server_operator_unit_test PROPERTIES
+                           FIXTURES_SETUP endoscopy_data_downloaded)
+    endif()
   endif()
 
   # Infrastructure tests (basic functionality without video data)
@@ -302,18 +337,24 @@ if(BUILD_TESTING)
 
   # Functional tests (with real video data, if available)
   if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/video_streaming_server_functional.py")
-    add_test(NAME streaming_server_operator_functional_test
-             COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/tests/run_functional_test.sh"
-                     "${CMAKE_BINARY_DIR}/operators/streaming_server/python"
-                     "${CMAKE_CURRENT_SOURCE_DIR}/tests/video_streaming_server_functional.py"
-                     "${HOLOHUB_DATA_DIR}/endoscopy"
-             WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+      add_test(NAME streaming_server_operator_functional_test
+               COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/tests/run_functional_test.sh"
+                       "${CMAKE_BINARY_DIR}/operators/streaming_server/python"
+                       "${CMAKE_CURRENT_SOURCE_DIR}/tests/video_streaming_server_functional.py"
+                       "${CMAKE_BINARY_DIR}/data/endoscopy"
+               WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
     set_tests_properties(streaming_server_operator_functional_test PROPERTIES
                          ENVIRONMENT "PYTHONPATH=${CMAKE_BINARY_DIR}/python/lib:$ENV{PYTHONPATH}"
                          TIMEOUT 120
                          PASS_REGULAR_EXPRESSION "FUNCTIONAL test PASSED.*Python StreamingServer.*successful"
                          FAIL_REGULAR_EXPRESSION "FUNCTIONAL test.*FAILED")
+
+    # Make functional tests depend on data download if data downloading is enabled
+    if(HOLOHUB_DOWNLOAD_DATASETS AND TARGET endoscopy_data)
+      set_tests_properties(streaming_server_operator_functional_test PROPERTIES
+                           FIXTURES_REQUIRED endoscopy_data_downloaded)
+    endif()
   endif()
 
   # C++ tests (if streaming_server_demo target exists)
@@ -324,13 +365,20 @@ if(BUILD_TESTING)
                      bash "${CMAKE_CURRENT_SOURCE_DIR}/tests/run_cpp_test.sh"
                      "$<TARGET_FILE:streaming_server_demo>"
                      "${CMAKE_CURRENT_SOURCE_DIR}/testing/video_streaming_server_testing.yaml"
-                     "${HOLOHUB_DATA_DIR}/endoscopy"
+                     "${CMAKE_BINARY_DIR}/data/endoscopy"
              WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
     set_tests_properties(streaming_server_operator_cpp_test PROPERTIES
                          TIMEOUT 120
                          PASS_REGULAR_EXPRESSION "C\\+\\+ StreamingServer.*test successful"
                          FAIL_REGULAR_EXPRESSION "Test FAILED:")
+
+    # Make C++ tests depend on data download if data downloading is enabled
+    if(HOLOHUB_DOWNLOAD_DATASETS AND TARGET endoscopy_data)
+      set_tests_properties(streaming_server_operator_cpp_test PROPERTIES
+                           FIXTURES_REQUIRED endoscopy_data_downloaded)
+      add_dependencies(streaming_server_demo endoscopy_data)
+    endif()
 
     # C++ functional test (if script exists)
     if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/run_cpp_functional_test.sh")
@@ -340,13 +388,19 @@ if(BUILD_TESTING)
                        bash "${CMAKE_CURRENT_SOURCE_DIR}/tests/run_cpp_functional_test.sh"
                        "$<TARGET_FILE:streaming_server_demo>"
                        "${CMAKE_CURRENT_SOURCE_DIR}/testing/video_streaming_server_testing.yaml"
-                       "${HOLOHUB_DATA_DIR}/endoscopy"
+                       "${CMAKE_BINARY_DIR}/data/endoscopy"
                WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
       set_tests_properties(streaming_server_operator_cpp_functional_test PROPERTIES
                            TIMEOUT 120
                            PASS_REGULAR_EXPRESSION "FUNCTIONAL test PASSED.*StreamingServer.*successful"
                            FAIL_REGULAR_EXPRESSION "FUNCTIONAL test.*FAILED")
+
+      # Make C++ functional test depend on data download if data downloading is enabled
+      if(HOLOHUB_DOWNLOAD_DATASETS AND TARGET endoscopy_data)
+        set_tests_properties(streaming_server_operator_cpp_functional_test PROPERTIES
+                             FIXTURES_REQUIRED endoscopy_data_downloaded)
+      endif()
     endif()
   endif()
 endif()
