Remove application testing infrastructure and keep only operator pytest tests
Signed-off-by: Cristiana Dinea <cdinea@nvidia.com>
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/streaming_client_enhanced/CMakeLists.txt
+++ b/operators/streaming_client_enhanced/CMakeLists.txt
@@ -282,5 +282,10 @@ if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
 endif()
 
+# Add unit testing subdirectory
+if(BUILD_TESTING)
+  add_subdirectory(testing)
+endif()
+
 # Print status message
 message(STATUS "StreamingClient operator configuration complete with imported targets.")
